[gd_scene load_steps=17 format=3 uid="uid://xlfxdxlhlrkm"]

[ext_resource type="PackedScene" uid="uid://j1dft6uobs3e" path="res://Scenes/beacon_tower.tscn" id="1_7mmc7"]
[ext_resource type="Script" path="res://Scripts/beacon_puzzle.gd" id="1_at053"]
[ext_resource type="Script" path="res://Scripts/beacon_tower.gd" id="2_mvinj"]
[ext_resource type="PackedScene" uid="uid://dt8namvmtn1ty" path="res://Scenes/beacon_node.tscn" id="3_o3mqj"]
[ext_resource type="PackedScene" uid="uid://k06cwvfdpar" path="res://Scenes/beacon_node_connector.tscn" id="4_642lw"]
[ext_resource type="Script" path="res://Scripts/beacon_recepticle.gd" id="5_kwhdc"]
[ext_resource type="Texture2D" uid="uid://sbbi7456qa7m" path="res://assets/beacon/beacon-win-button.png" id="6_fh508"]
[ext_resource type="Texture2D" uid="uid://8nfw6dhdpgp6" path="res://assets/beacon/beacon-win-button-depressed.png" id="7_bnvyy"]
[ext_resource type="Script" path="res://Scripts/inventory_items.gd" id="8_mw2nl"]
[ext_resource type="Texture2D" uid="uid://r65av6xkmun3" path="res://assets/beacon/beacon-node-empty.png" id="9_j3efo"]
[ext_resource type="PackedScene" uid="uid://bwxw7y4e4hphw" path="res://Scenes/beacon_node_menu.tscn" id="10_p16de"]
[ext_resource type="PackedScene" uid="uid://chme11eyldqed" path="res://Scenes/beacon_node_item_slot.tscn" id="11_2xr33"]
[ext_resource type="Script" path="res://Scripts/beacon_node_output_slot.gd" id="12_gs16d"]
[ext_resource type="PackedScene" uid="uid://geda8gmbwuga" path="res://Scenes/beacon_node_button.tscn" id="13_6vynv"]

[sub_resource type="GDScript" id="GDScript_tquvq"]

[sub_resource type="GDScript" id="GDScript_vcol3"]
resource_name = "ShowNodeMenuButton"
script/source = "extends BeaconButton

var beaconNodeMenu = null

signal menu_toggled(opened: bool)

func _ready():
	beaconNodeMenu = get_parent()
	
	#playerView = Helpers.get_all_children(get_parent().get_parent().get_parent().get_parent().get_parent().get_node(\"PlayerView\"), [])
	
#func _process(delta):
	

func _on_clicked(_transformation_type): # note.jmc - probably remove this discarded param later
	# HACK.jmc - seems the player view as it currently stands eats mouse inputs
	var currentVisibility = beaconNodeMenu.visible
	#for child in playerView:
		#child.set_process_input(true)
	beaconNodeMenu.visible = !currentVisibility
	menu_toggled.emit(currentVisibility)
	
	# HACK.jmc - this is unbelievably fragile lmao
	get_parent().get_parent().get_parent().get_parent().get_node(\"BeaconTower\")._on_node_selected(null)
"

[node name="BeaconPuzzle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_at053")

[node name="BeaconTower" parent="." instance=ExtResource("1_7mmc7")]
position = Vector2(664, 0)
script = ExtResource("2_mvinj")
debug_instant_win = true

[node name="BeaconNode1" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(100, 566)
id = 1
availableNodeIds = Array[int]([2, 4, 3])

[node name="BeaconNode2" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(-17, 473)
id = 2
availableNodeIds = Array[int]([5, 4, 1])

[node name="BeaconNode3" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(217, 481)
id = 3
availableNodeIds = Array[int]([6, 1, 4])

[node name="BeaconNode4" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(102, 381)
id = 4
availableNodeIds = Array[int]([7, 6, 3, 1, 2, 5])

[node name="BeaconNode5" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(-30, 304)
id = 5
availableNodeIds = Array[int]([8, 7, 4, 2])

[node name="BeaconNode6" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(233, 306)
id = 6
availableNodeIds = Array[int]([9, 3, 4, 7])

[node name="BeaconNode7" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(101, 230)
id = 7
availableNodeIds = Array[int]([10, 9, 6, 4, 5, 8])

[node name="BeaconNode8" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(-35, 147)
id = 8
availableNodeIds = Array[int]([100, 10, 7, 5])

[node name="BeaconNode9" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(238, 147)
id = 9
availableNodeIds = Array[int]([300, 6, 7, 10])

[node name="BeaconNode10" parent="BeaconTower" groups=["BeaconNodes"] instance=ExtResource("3_o3mqj")]
z_index = 1
position = Vector2(101, 89)
id = 10
availableNodeIds = Array[int]([200, 300, 9, 7, 8, 100])

[node name="Connector1-2" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(42, 561)
rotation = -0.785398
connection = Array[int]([1, 2])

[node name="Connector1-3" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(267, 521)
rotation = 0.785398
connection = Array[int]([1, 3])

[node name="Connector1-4" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(149, 456)
connection = Array[int]([1, 4])

[node name="Connector2-4" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(174, 410)
rotation = 0.883137
connection = Array[int]([2, 4])

[node name="Connector2-5" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(9, 369)
rotation = -0.0977384
connection = Array[int]([2, 5])

[node name="Connector3-4" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(158, 459)
rotation = -0.884882
connection = Array[int]([3, 4])

[node name="Connector3-6" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(286, 353)
rotation = 0.0977384
connection = Array[int]([3, 6])

[node name="Connector4-5" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(183, 431)
rotation = 2.06123
connection = Array[int]([4, 5])

[node name="Connector4-6" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(195, 453)
rotation = -2.16072
connection = Array[int]([4, 6])

[node name="Connector4-7" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(148, 281)
connection = Array[int]([4, 7])

[node name="Connector5-7" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(154, 267)
rotation = 0.98262
connection = Array[int]([5, 7])

[node name="Connector5-8" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(8, 186)
rotation = -0.0271211
connection = Array[int]([5, 8])

[node name="Connector6-7" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(148, 286)
rotation = -0.980875
connection = Array[int]([6, 7])

[node name="Connector6-9" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(283, 185)
rotation = 0.00876406
connection = Array[int]([6, 9])

[node name="Connector7-8" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(8, 221)
rotation = -1.00466
connection = Array[int]([7, 8])

[node name="Connector7-9" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(287, 195)
rotation = 0.949386
connection = Array[int]([7, 9])

[node name="Connector7-10" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(148, 138)
connection = Array[int]([7, 10])

[node name="Connector8-10" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(31, 229)
rotation = -1.98112
connection = Array[int]([8, 10])

[node name="Connector8-A" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(27, 73)
rotation = 0.166606
connection = Array[int]([8, 100])

[node name="Connector9-10" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(158, 160)
rotation = -1.12586
connection = Array[int]([9, 10])

[node name="Connector9-C" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(266, 82)
rotation = -0.1199
connection = Array[int]([9, 300])

[node name="Connector10-A" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(20, 101)
rotation = -1.06991
connection = Array[int]([10, 100])

[node name="Connector10-B" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(147, 22)
connection = Array[int]([10, 200])

[node name="Connector10-C" parent="BeaconTower" instance=ExtResource("4_642lw")]
position = Vector2(287, 64)
rotation = 1.02746
connection = Array[int]([10, 300])

[node name="BeaconRecepticle1" parent="BeaconTower" instance=ExtResource("3_o3mqj")]
position = Vector2(16, 68)
scale = Vector2(0.42, 0.42)
script = ExtResource("5_kwhdc")
id = 100
expected_input = "salt"

[node name="BeaconRecepticle2" parent="BeaconTower" instance=ExtResource("3_o3mqj")]
position = Vector2(138, 19)
scale = Vector2(0.42, 0.42)
script = ExtResource("5_kwhdc")
id = 200
expected_input = "fire"

[node name="BeaconRecepticle3" parent="BeaconTower" instance=ExtResource("3_o3mqj")]
position = Vector2(259, 66)
scale = Vector2(0.42, 0.42)
script = ExtResource("5_kwhdc")
id = 300
expected_input = "silver"

[node name="BeaconSubmitButton" type="TextureButton" parent="BeaconTower"]
offset_left = 11.0
offset_top = 684.0
offset_right = 513.0
offset_bottom = 777.0
scale = Vector2(0.62359, 0.72)
texture_normal = ExtResource("6_fh508")
texture_pressed = ExtResource("7_bnvyy")
stretch_mode = 0

[node name="BeaconWinConditionText" type="Label" parent="BeaconTower"]
visible = false
offset_left = 197.0
offset_top = 5.0
offset_right = 355.0
offset_bottom = 28.0
text = "u lost bitch ahahaha"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryItems" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("8_mw2nl")
debug_items = Array[String](["fire", "sulfur", "earth", "salt", "quicksilver", "silver"])

[node name="MockUI" type="Node" parent="."]

[node name="InventoryContainer" type="HBoxContainer" parent="MockUI"]
z_index = 1
custom_minimum_size = Vector2(472, 64)
offset_left = 180.0
offset_top = 580.0
offset_right = 652.0
offset_bottom = 644.0
script = SubResource("GDScript_tquvq")

[node name="InventorySlotsContainer" type="HBoxContainer" parent="MockUI"]
offset_left = 180.0
offset_top = 580.0
offset_right = 652.0
offset_bottom = 644.0
mouse_filter = 2
script = SubResource("GDScript_tquvq")

[node name="Slot1" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="Slot2" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="Slot3" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="Slot4" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="Slot5" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="Slot6" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="Slot7" type="ColorRect" parent="MockUI/InventorySlotsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
color = Color(0.478462, 0.233416, 0.0780104, 1)

[node name="ThreePrimesContainer" type="HBoxContainer" parent="MockUI"]
offset_left = 223.0
offset_top = 647.0
offset_right = 622.0
offset_bottom = 769.0
scale = Vector2(0.977618, 0.902249)

[node name="SaltContainer" type="CenterContainer" parent="MockUI/ThreePrimesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuicksilverContainer" type="CenterContainer" parent="MockUI/ThreePrimesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SulfurContainer" type="CenterContainer" parent="MockUI/ThreePrimesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ThreePrimesContainerBackdrop" type="HBoxContainer" parent="MockUI"]
offset_left = 223.0
offset_top = 647.0
offset_right = 618.0
offset_bottom = 769.0
scale = Vector2(0.977618, 0.902249)
mouse_filter = 2

[node name="Slot1" type="TextureRect" parent="MockUI/ThreePrimesContainerBackdrop"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("9_j3efo")

[node name="Slot2" type="TextureRect" parent="MockUI/ThreePrimesContainerBackdrop"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("9_j3efo")

[node name="Slot3" type="TextureRect" parent="MockUI/ThreePrimesContainerBackdrop"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("9_j3efo")

[node name="BeaconNodeView" type="Node" parent="MockUI"]

[node name="BeaconNodeMenu" parent="MockUI/BeaconNodeView" instance=ExtResource("10_p16de")]
visible = false
z_index = 1
position = Vector2(184, 16)

[node name="InputContainer" type="HBoxContainer" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
offset_left = 126.0
offset_top = 82.0
offset_right = 301.0
offset_bottom = 122.0
scale = Vector2(1.613, 1.613)

[node name="InputSlot1" parent="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2

[node name="InputSlot2" parent="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
slot_id = 1

[node name="InputSlot3" parent="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
slot_id = 2

[node name="InputSlot4" parent="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
slot_id = 3

[node name="OutputContainer" type="HBoxContainer" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
offset_left = 122.0
offset_top = 468.0
offset_right = 297.0
offset_bottom = 508.0
scale = Vector2(1.613, 1.613)

[node name="OutputSlot1" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
script = ExtResource("12_gs16d")

[node name="DestinationLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot1"]
layout_mode = 0
offset_left = 25.0
offset_top = 38.0
offset_right = 66.0
offset_bottom = 61.0
scale = Vector2(0.397905, 0.603794)

[node name="OutputSlot2" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
script = ExtResource("12_gs16d")
slot_id = 1

[node name="DestinationLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot2"]
layout_mode = 0
offset_left = 25.0
offset_top = 38.0
offset_right = 84.0
offset_bottom = 61.0
scale = Vector2(0.265203, 0.567695)

[node name="OutputSlot3" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
script = ExtResource("12_gs16d")
slot_id = 2

[node name="DestinationLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot3"]
layout_mode = 0
offset_left = 25.0
offset_top = 38.0
offset_right = 84.0
offset_bottom = 61.0
scale = Vector2(0.339598, 0.567696)

[node name="OutputSlot4" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer" instance=ExtResource("11_2xr33")]
layout_mode = 2
script = ExtResource("12_gs16d")
slot_id = 3

[node name="DestinationLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot4"]
layout_mode = 0
offset_left = 25.0
offset_top = 38.0
offset_right = 84.0
offset_bottom = 61.0
scale = Vector2(0.265203, 0.567695)

[node name="SelectedNodeLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
offset_left = 130.0
offset_top = 21.0
offset_right = 238.0
offset_bottom = 48.0
text = "none selected"

[node name="SelectedTransformationLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
offset_left = 224.0
offset_top = 309.0
offset_right = 307.0
offset_bottom = 332.0
text = "neutral
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedInputLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
visible = false
offset_left = 37.0
offset_top = 71.0
offset_right = 297.0
offset_bottom = 172.0
text = "none"
autowrap_mode = 2

[node name="SelectedOutputLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
visible = false
offset_left = 37.0
offset_top = 236.0
offset_right = 297.0
offset_bottom = 266.0
text = "none"
autowrap_mode = 2

[node name="AvailableItemsLabel" type="Label" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
offset_left = 14.0
offset_top = 53.0
offset_right = 120.0
offset_bottom = 108.0

[node name="ShowNodeMenuButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(400, -3)
scale = Vector2(0.54, 0.54)
script = SubResource("GDScript_vcol3")

[node name="SolutionButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(104, 214)
transformation_type = "solution"

[node name="DissolutionButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(112, 317)
transformation_type = "dissolution"

[node name="AscensionButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(209, 188)
transformation_type = "ascension"

[node name="SublimationButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(308, 317)
transformation_type = "sublimation"

[node name="DistillationButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(313, 213)
transformation_type = "distillation"

[node name="ClearButton" parent="MockUI/BeaconNodeView/BeaconNodeMenu" instance=ExtResource("13_6vynv")]
position = Vector2(222, 355)
scale = Vector2(0.8, 0.8)
transformation_type = "neutral"

[node name="AvailableItemsContainer" type="VBoxContainer" parent="MockUI/BeaconNodeView/BeaconNodeMenu"]
offset_left = 20.0
offset_top = 53.0
offset_right = 82.0
offset_bottom = 508.0
alignment = 1

[connection signal="connections_updated" from="BeaconTower" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_beacon_tower_connections_updated"]
[connection signal="node_selected" from="BeaconTower" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_beacon_tower_node_selected"]
[connection signal="puzzle_won" from="BeaconTower" to="." method="_on_puzzle_won"]
[connection signal="selected" from="BeaconTower/BeaconNode1" to="BeaconTower" method="_on_node_selected"]
[connection signal="transformed" from="BeaconTower/BeaconNode1" to="BeaconTower" method="_on_transformed"]
[connection signal="selected" from="BeaconTower/BeaconNode2" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode3" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode4" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode5" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode6" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode7" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode8" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode9" to="BeaconTower" method="_on_node_selected"]
[connection signal="selected" from="BeaconTower/BeaconNode10" to="BeaconTower" method="_on_node_selected"]
[connection signal="pressed" from="BeaconTower/BeaconSubmitButton" to="BeaconTower" method="_on_beacon_submit_button_pressed"]
[connection signal="menu_toggled" from="MockUI/BeaconNodeView/BeaconNodeMenu" to="." method="_on_menu_toggled"]
[connection signal="item_cleared" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot1" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_cleared"]
[connection signal="item_dropped" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot1" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_dropped"]
[connection signal="item_cleared" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot2" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_cleared"]
[connection signal="item_dropped" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot2" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_dropped"]
[connection signal="item_cleared" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot3" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_cleared"]
[connection signal="item_dropped" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot3" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_dropped"]
[connection signal="item_cleared" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot4" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_cleared"]
[connection signal="item_dropped" from="MockUI/BeaconNodeView/BeaconNodeMenu/InputContainer/InputSlot4" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_item_dropped"]
[connection signal="destination_updated" from="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot1" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_output_slot_destination_updated"]
[connection signal="destination_updated" from="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot2" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_output_slot_destination_updated"]
[connection signal="destination_updated" from="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot3" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_output_slot_destination_updated"]
[connection signal="destination_updated" from="MockUI/BeaconNodeView/BeaconNodeMenu/OutputContainer/OutputSlot4" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_output_slot_destination_updated"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/ShowNodeMenuButton" to="MockUI/BeaconNodeView/BeaconNodeMenu/ShowNodeMenuButton" method="_on_clicked"]
[connection signal="menu_toggled" from="MockUI/BeaconNodeView/BeaconNodeMenu/ShowNodeMenuButton" to="." method="_on_menu_toggled"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/SolutionButton" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_transformation_type_selected"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/DissolutionButton" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_transformation_type_selected"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/AscensionButton" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_transformation_type_selected"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/SublimationButton" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_transformation_type_selected"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/DistillationButton" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_transformation_type_selected"]
[connection signal="clicked" from="MockUI/BeaconNodeView/BeaconNodeMenu/ClearButton" to="MockUI/BeaconNodeView/BeaconNodeMenu" method="_on_transformation_type_selected"]
